--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
 		"@sveltejs/adapter-static": "^1.0.0-next.47",
 		"@sveltejs/kit": "next",
 		"@sveltejs/package": "next",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.18",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.8.0",
 		"svelte": "^3.52.0",
 		"svelte-check": "^2.9.2",
 		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.2.1",
 		"tslib": "^2.4.1",
 		"typescript": "^4.8.4",
 		"vite": "^3.2.2"
